começando base de edição e exibição de artigo do site

--- a/views/articleOne.ejs
+++ b/views/articleOne.ejs
@@ -10,63 +10,13 @@
         <div class="users__content">
 
             <div class="users__section__header">
-                <h1 class="title__header">Pagina de um artigo</h1>
+                <img src="<%= exp_image_home %>" alt="">
+                <h1 class="title__header"><%= title %></h1>
+                <p><%= description_home %></p>
+                
             </div>
 
-            <div class="users__section__body">
-                <div class="user__block">
-                    <div class="user__info">
-                        <h2 class="user__title">foto</h2>
-                    </div>
-                    <div class="user__info">
-                        <img class="user__image" src="assets/male-user-shadow-svgrepo-com.svg" alt="">
-                    </div>
-                </div>
-
-                <div class="user__block">
-                    <div class="user__info">
-                        <h2 class="user__title">Audio descrição</h2>
-                    </div>
-                    <div class="user__info">
-                        <audio src="" type="mp3"></audio>
-                    </div>
-                </div>
-
-                <div class="user__block">
-                    <div class="user__info">
-                        <h2 class="user__title">materiais</h2>
-                    </div>
-                    <div class="user__info">
-                        <p>Fellippe Matheus</p>
-                    </div>
-                </div>
-
-                <div class="user__block">
-                    <div class="user__info">
-                        <h2 class="user__title">passo a passo</h2>
-                    </div>
-                    <div class="user__info">
-                        <p>Fellippe Matheus</p>
-                    </div>
-                </div>
-
-                <div class="user__block">
-                    <div class="user__info">
-                        <h2 class="user__title">video</h2>
-                    </div>
-                    <div class="user__info">
-                        <p>Administrador</p>
-                    </div>
-                </div>
-
-                <div class="user__block">
-                    <div class="user__info">
-                        <h2 class="user__title">Fotos</h2>
-                    </div>
-                    <div class="user__info">
-                        <p>Administrador</p>
-                    </div>
-                </div>
+            <h2></h2>
                           
             </div>
 
