--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,79 +10,26 @@
     <div class="wrapper">
         <!--Itens-->
         <!--vai ter um for each e pra cada "block" um titulo, foto, descrição-->
+      
+
+        <% articles.forEach(article => { %>
+
                     <div class="block">
+                       
                         <div class="block-img">
                             <img src="/assets/img-test/copos-coloridos.jpg" alt="HTML5">
                         </div>
                         <div class="block-desc">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            <h2><%= article.title %></h2>
+                            <p><%= article.description_home  %></p>
                         </div>
                         <div class="block-link">
-                            <a href="#">Ver mais</a>
+                            <a href="/<%= article.slug %>">Ver mais</a>
                         </div>
                     </div>
-        
-                    <div class="block">
-                        <div class="block-img">
-                            <img src="/assets/img-test/eletricidade1.jpg" alt="CSS3">
-                        </div>
-                        <div class="block-desc">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi velit, iusto nihil ex tenetur temporibus aliquid.
-                        </div>
-                        <div class="block-link">
-                            <a href="#">Ver mais</a>
-                        </div>
-                    </div>
-        
-                    <div class="block">
-                        <div class="block-img">
-                            <img src="/assets/img-test/leitecolorido.jpg" alt="jQuery">
-                        </div>
-                        <div class="block-desc">
-                            Lorem ipsum dolor sit amet, consectetur.
-                        </div>
-                        <div class="block-link">
-                            <a href="#">Ver mais</a>
-                        </div>
-                    </div>
-        
-                    <div class="block">
-                        <div class="block-img">
-                            <img src="/assets/img-test/material-experimento-moedas.jpg" alt="Apache">
-                        </div>
-                        <div class="block-desc">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi velit, iusto nihil ex tenetur temporibus aliquid dolores debitis esse
-                            possimus dolorem harum accusantium magnam tempora, ab, assumenda doloribus nam alias?
-                        </div>
-                        <div class="block-link">
-                            <a href="#">Ver mais</a>
-                        </div>
-                    </div>
-        
-                    <div class="block">
-                        <div class="block-img">
-                            <img src="/assets/img-test/quimica1.png" alt="Unity 3D">
-                        </div>
-                        <div class="block-desc">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi velit, iusto nihil ex tenetur.
-                        </div>
-                        <div class="block-link">
-                            <a href="#">Ver mais</a>
-                        </div>
-                    </div>
-                     
-                    <div class="block">
-                        <div class="block-img">
-                            <img src="/assets/img-test/vela1.jpg" alt="Xamarin">
-                        </div>
-                        <div class="block-desc">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi velit, iusto nihil ex tenetur temporibus aliquid dolores debitis esse
-                            possimus dolorem harum accusantium.
-                        </div>
-                        <div class="block-link">
-                            <a href="#">Ver mais</a>
-                        </div>
-                    </div>
+        <% }) %>
+
+                   
 
                     
         <!--Termina Itens-->
