criando base da view de artigo/experiência

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
                             <p><%= article.description_home  %></p>
                         </div>
                         <div class="block-link">
-                            <a href="/<%= article.slug %>">Ver mais</a>
+                            <a href="/article/<%= article.slug %>">Ver mais</a>
                         </div>
                     </div>
         <% }) %>
