--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -11,5 +11,6 @@
     <link rel="stylesheet" href="/css/partials/navbarDash.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/articleOne.css">
     <title>main</title>
 </head>
