--- a/views/articleOne.ejs
+++ b/views/articleOne.ejs
@@ -2,27 +2,105 @@
 
 
 <body>
-    <%- include("partials/header.ejs") %>
+    <%- include("partials/headerAlternativo.ejs") %>
 
     <main class="content">
 
 
-        <div class="users__content">
+        <div class="article__content">
 
-            <div class="users__section__header">
-                <img src="<%= exp_image_home %>" alt="">
-                <h1 class="title__header"><%= title %></h1>
-                <p><%= description_home %></p>
+            <div class="article__section__header">
+                <h3 class="article__user__photo">Publicado por:</h3>
+                <div class="article__round-container">
+                    <img src="/assets/male-user-shadow-svgrepo-com.svg">
+                </div>   
+                <p class="article__user__name" >Fellippe Matheus</p>
+                
+                <h3 class="article__date__title">Em:</h3>
+                <p class="article__date"><%= created_at %></p>
+                
+                <h3 class="article__date__update">Atualizado em: </h3>
+                <p class="article__update" ><%= updated_at %></p>
                 
             </div>
 
-            <h2></h2>
-                          
+            <div class="article__section_body">
+                <img src="<%= exp_image_home %>" alt="">
+                <h1><%= title %></h3>
+                <p><%= description_home %></p>
+
+                <h3>Materiais</h3>
+                <p><%= materials %></p>
+
+                <h3>Passo a passo</h3>
+                <p><%= steps_by_step %></p>
+
+                <h3>Video de demonstração</h3>
+                <!-- video bugando no opera
+                    <iframe height="240" src="https://www.youtube.com/embed/kVlcGpXqZ8Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                -->
+               
+               <!-- <img src="<%= exp_image_initial %>" alt=""> -->
+
+                <h3>Imagens de demonstração</h3>
+                <!-- Slideshow container -->
+                <div class="slideshow-container">
+
+                    <!-- Full-width images with number and caption text -->
+                    <div class="mySlides fade">
+                    <div class="numbertext">1 / 3</div>
+                    <img class="slide__img" src="/assets/img-test/copos-coloridos.jpg" >
+                    <div class="text">Caption One</div>
+                    </div>
+                
+                    <div class="mySlides fade">
+                    <div class="numbertext">2 / 3</div>
+                    <img class="slide__img" src="/assets/img-test/eletricidade1.jpg" >
+                    <div class="text">Caption Two</div>
+                    </div>
+                
+                    <div class="mySlides fade">
+                    <div class="numbertext">3 / 3</div>
+                    <img class="slide__img" src="/assets/img-test/leitecolorido.jpg" >
+                    <div class="text">Caption Three</div>
+                    </div>
+                
+                    <!-- Next and previous buttons -->
+                    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                </div>
+                <br>
+                
+                <!-- The dots/circles -->
+                <div style="text-align:center">
+                    <span class="dot" onclick="currentSlide(1)"></span>
+                    <span class="dot" onclick="currentSlide(2)"></span>
+                    <span class="dot" onclick="currentSlide(3)"></span>
+                </div>
+                
+                <h3>Para professores</h3>
+
+                
+                <button type="button" class="collapsible">Orientações importantes</button>
+                <div class="button__content">
+                <p><%= tips_important %></p>
+                </div>
+
+                <button type="button" class="collapsible">Dicas para o EaD</button>
+                <div class="button__content">
+                <p><%= tips_ead %></p>
+                </div>
+
+               
+
+                
+                
             </div>
 
         </div>
         
     </main>
+    <script src="/js/script.js"></script>
     
 
     <%- include("partials/footer.ejs") %>
