--- a/views/articleOne.ejs
+++ b/views/articleOne.ejs
@@ -25,7 +25,7 @@
             </div>
 
             <div class="article__section_body">
-                <img src="<%= exp_image_home %>" alt="">
+                
                 <h1><%= title %></h3>
                 <p><%= description_home %></p>
 
@@ -49,19 +49,19 @@
                     <!-- Full-width images with number and caption text -->
                     <div class="mySlides fade">
                     <div class="numbertext">1 / 3</div>
-                    <img class="slide__img" src="/assets/img-test/copos-coloridos.jpg" >
+                    <img class="slide__img" src="<%= exp_image_home %>" >
                     <div class="text">Caption One</div>
                     </div>
                 
                     <div class="mySlides fade">
                     <div class="numbertext">2 / 3</div>
-                    <img class="slide__img" src="/assets/img-test/eletricidade1.jpg" >
+                    <img class="slide__img" src="<%= exp_image_initial %>" >
                     <div class="text">Caption Two</div>
                     </div>
                 
                     <div class="mySlides fade">
                     <div class="numbertext">3 / 3</div>
-                    <img class="slide__img" src="/assets/img-test/leitecolorido.jpg" >
+                    <img class="slide__img" src="<%= exp_image_done %>" >
                     <div class="text">Caption Three</div>
                     </div>
                 
