--- a/views/articlesNewSubadmin.ejs
+++ b/views/articlesNewSubadmin.ejs
@@ -10,51 +10,113 @@
 
         <div class="admin__content">
 
-            <div class="users__section__header">
+            <div class="article__section__header">
                 <h1 class="title__header">Criar novo artigo</h1>
             </div>
 
-            <div class="users__section__body">
+            <form action="/subadmin/dashboard/articles/new" method="POST">
+                <fieldset>
+
+                    <legend>Tela inicial</legend>
+                    <div class="article__item">
+                        <label for=""> Titulo do experimento</label>
+                        <input type="text" name="title" placeholder="Ex: Fogo na mão" required>     
+                    </div>
+                   
+                    <div class="article__item">
+                        <label for="">Link da foto que representa o experimento</label>
+                        <input type="text" name="exp_image_home" placeholder="Ex: https://lh3.googleusercontent.com/Hv">
+                    </div>
+                   
+                    <div class="article__item">
+                        <label for="">Descrição resumida do experimento</label>
+                        <textarea name="description_home" id="" cols="30" rows="10" placeholder="Experiência envolvendo fogo na mão usando maiseza" required></textarea>    
+                    </div>
+                </fieldset>
+
+                <fieldset>
+                    <legend>Corpo do experimento</legend>
+                    <div class="article__item">
+                        <label for="">Materiais</label>
+                        <textarea name="materials" id="" cols="30" rows="10" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required>2 - Palitos
+5 - Papeis
+....
+                        </textarea>
+
+                    </div>
+
+                    <div class="article__item">
+                        <label for="">Passo a passo</label>
+                        <textarea name="steps_by_step" id="" cols="30" rows="10" placeholder="Primeiro é preciso encher o balde com água com bom ar, depois misturar muito bem..." required>1- É preciso pegar a..
+2- Misturamos tudo e..
+....
+                        </textarea>
+                    </div>
+
+                    <div class="article__item">
+                        <label for="">Link do video do experimento</label>
+                        <input type="text" name="exp_video">
+                    </div>
+
+                    <div class="article__item">
+                        <label for="">Link da imagem do ínicio do experimento</label>
+                        <input type="text" name="exp_image_initial" id="" placeholder="Ex: https://lh3.googleusercontent.com/Hv">
+                    </div>
+
+                    <div class="article__item">
+                        <label for="">Link da imagem do final do experimento</label>
+                        <input type="text"  name="exp_image_done" placeholder="Ex: https://lh3.googleusercontent.com/Hv" >
+                    </div>
+                    
+                </fieldset>
+
+                <!--
+                    <fieldset>
+                        <legend>Categorias</legend>
+                        <label for="category">Assunto</label>
+                        <select name="category" id="">
+                            <% categories.forEach((category) => {  %>
+                                <option value="<%= category.id %>"><%= category.title %></option>
+                            <% }) %>
+                        </select>
+
+                        <label for="category2">Preço</label>
+                        <select name="category2" id="">
+                            <% categories2.forEach((category2) => {  %>
+                                <option value="<%= category2.id %>"><%= category2.title %></option>
+                            <% }) %>
+                        </select>
+
+                        <label for="category3">BNCC</label>
+                        <select name="category3" id="">
+                            <% categories3.forEach((category3) => {  %>
+                                <option value="<%= category3.id %>"><%= category3.title %></option>
+                            <% }) %>
+                        </select>
+                    </fieldset>
+                -->
+
+                <fieldset>
+                    <legend>Orientações para professores</legend>
+                    <div class="article__item">
+                        <label for="">Dicas importantes</label>
+                        <textarea name="tips_important" id="" cols="30" rows="10" placeholder="Um ponto negativo deste experimento é que se deve ter cuidado na hora de colocar fogo na mão" required></textarea>
+                    </div>
+
+                    <div class="article__item">
+                        <label for="">Dicas para o EaD</label>
+                        <textarea name="tips_ead" id="" cols="30" rows="10" placeholder="No EaD, é preciso muita atenção a orientação para o aluno não cometer erros..." required></textarea>
+                    </div>
+
+                    <input type="submit" value="Enviar experimento">
+
+                </fieldset>
+            </form>
+           
+
+            
                 
-                <div class="user__block">
-                    <div class="user__info">
-                        <h2 class="user__title">Nome</h2>
-                    </div>
-                    <div class="user__info">
-                        <p>Fellippe Matheus</p>
-                    </div>
-                </div>
 
-                <div class="user__block">
-                    <div class="user__info">
-                        <h2 class="user__title">Email</h2>
-                    </div>
-                    <div class="user__info">
-                        <p>Fellippe.matheus@hotmail.com</p>
-                    </div>
-                </div>
-
-                <div class="user__block">
-                    <div class="user__info">
-                        <h2 class="user__title">Cargo</h2>
-                    </div>
-                    <div class="user__info">
-                        <p>Administrador</p>
-                    </div>
-                </div>
-
-                <div class="user__block">
-                    <div class="user__info">
-                        <h2 class="user__title">Opções</h2>
-                    </div>
-                    <div class="user__info">
-                        <button>Excluir</button>
-                        <button>Editar</button>
-                    </div>
-                </div>
-                
-
-            </div>
 
         </div>
         
