base para view/controller de artigos por categoria

--- a/views/partials/navbarAdmin.ejs
+++ b/views/partials/navbarAdmin.ejs
@@ -1,7 +1,7 @@
 <div class="tab">
 
     <h2>ARTIGOS</h2>
-    <button class="tablinks"><a href="/admin/dashboard">Inicio</a></button>
+    <button class="tablinks"><a href="/admin/dashboard">Orientações</a></button>
     <button class="tablinks"><a href="/admin/dashboard/articles/new">Criar artigo</a></button>
     <button class="tablinks"><a href="/admin/dashboard/articles">Lista de artigos</a></button>
     <button class="tablinks"><a href="/admin/dashboard/articles/deleted">Lista de artigos deletados</a></button>
