--- a/views/partials/navbarSubAdmin.ejs
+++ b/views/partials/navbarSubAdmin.ejs
@@ -1,7 +1,7 @@
 <div class="tab">
 
     <h2>ARTIGOS</h2>
-    <button class="tablinks"><a href="/subadmin/dashboard">Inicio</a></button>
+    <button class="tablinks"><a href="/subadmin/dashboard">Orientações</a></button>
     <button class="tablinks"><a href="/subadmin/dashboard/articles/new">Criar artigo</a></button>
     <button class="tablinks"><a href="/subadmin/dashboard/articles">Lista de artigos</a></button>
 
