terminando base da view de edição e criação de artigo, com validações no front

--- a/views/articleOne.ejs
+++ b/views/articleOne.ejs
@@ -77,10 +77,14 @@
                     <span class="dot" onclick="currentSlide(2)"></span>
                     <span class="dot" onclick="currentSlide(3)"></span>
                 </div>
-                
-                <h3>Para professores</h3>
+
+                <h3>Categorias</h3>
+                <p>Assunto: <span><%= cat_title %></span></p>
+                <p>Preço: <span><%= cat2_title %></span></p>
+                <p>BNCC: <span><%= cat3_title %></span></p>
 
                 
+                <h3>Para professores</h3>
                 <button type="button" class="collapsible">Orientações importantes</button>
                 <div class="button__content">
                 <p><%= tips_important %></p>
